--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,162 +1,115 @@
 <!doctype html>
 <html lang="ja">
-  <head prefix="og: https://ogp.me/ns#">
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <meta
-      name="description"
-      content="{{ .Site.Params.description }}"
-    />
-    <title>{{ .Title }}</title>
 
-    {{/* OGP */}}
-    {{ partial  "ogp.html" . }}
+<head prefix="og: https://ogp.me/ns#">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="{{ .Site.Params.description }}" />
+  <title>{{ .Title }}</title>
 
-    {{/* Favicon */}}
-    {{ partial  "favicon.html" . }}
+  {{/* OGP */}}
+  {{ partial "ogp.html" . }}
 
-    {{/* For preview build */}}
-    {{ if eq hugo.Environment "development" }}
-      <meta
-        name="robots"
-        content="noindex"
-      />
-    {{ end }}
+  {{/* Favicon */}}
+  {{ partial "favicon.html" . }}
 
-    {{/* The New CSS Reset */}}
-    {{ with resources.GetRemote "https://cdn.jsdelivr.net/npm/the-new-css-reset@latest/css/reset.css" | minify }}
-      <link
-        rel="stylesheet"
-        href="{{ .Permalink }}"
-      />
-    {{ end }}
+  {{/* For preview build */}}
+  {{ if eq hugo.Environment "development" }}
+  <meta name="robots" content="noindex" />
+  {{ end }}
 
-    {{/* CSS */}}
-    {{ with resources.Get "scss/style.scss" | resources.ToCSS | resources.Fingerprint }}
-      <link
-        rel="stylesheet"
-        href="{{ .Permalink }}"
-      />
-    {{ end }}
+  {{/* The New CSS Reset */}}
+  {{ with resources.GetRemote "https://cdn.jsdelivr.net/npm/the-new-css-reset@latest/css/reset.css" | minify }}
+  <link rel="stylesheet" href="{{ .Permalink }}" />
+  {{ end }}
 
-    {{/* Google Fonts */}}
+  {{/* CSS */}}
+  {{ with resources.Get "scss/style.scss" | css.Sass| resources.Fingerprint }}
+  <link rel="stylesheet" href="{{ .Permalink }}" />
+  {{ end }}
+
+  {{/* Google Fonts */}}
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    data-href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
+    rel="stylesheet" id="google-fonts" />
+  <noscript>
     <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      data-href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
-      rel="stylesheet"
-      id="google-fonts"
-    />
-    <noscript>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
-        rel="stylesheet"
-      />
-    </noscript>
-  </head>
-  <body class="body">
-    <header class="header">
-      {{/* トグル */}}
-      <input
-        type="checkbox"
-        name="toggle"
-        id="header-toggle"
-        class="header__toggle"
-      />
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
+      rel="stylesheet" />
+  </noscript>
+</head>
 
-      {{/* ヘッダー開ボタン */}}
-      <label
-        for="header-toggle"
-        class="header__toggle-button header__toggle-button--open"
-        aria-label="メニューを開く"
-      >
-        {{ (resources.Get "img/icons/menu.svg").Content | safeHTML }}
+<body class="body">
+  <header class="header">
+    {{/* トグル */}}
+    <input type="checkbox" name="toggle" id="header-toggle" class="header__toggle" />
+
+    {{/* ヘッダー開ボタン */}}
+    <label for="header-toggle" class="header__toggle-button header__toggle-button--open" aria-label="メニューを開く">
+      {{ (resources.Get "img/icons/menu.svg").Content | safeHTML }}
+    </label>
+
+    {{/* ヘッダー */}}
+    <div class="header__wrapper">
+      {{/* ヘッダー閉ボタン */}}
+      <label for="header-toggle" class="header__toggle-button header__toggle-button--close" aria-label="メニューを閉じる">
+        {{ (resources.Get "img/icons/close.svg").Content | safeHTML }}
       </label>
 
-      {{/* ヘッダー */}}
-      <div class="header__wrapper">
-        {{/* ヘッダー閉ボタン */}}
-        <label
-          for="header-toggle"
-          class="header__toggle-button header__toggle-button--close"
-          aria-label="メニューを閉じる"
-        >
-          {{ (resources.Get "img/icons/close.svg").Content | safeHTML }}
-        </label>
+      {{/* ロゴ */}}
+      <a href="{{ .Site.Home.Permalink }}" class="logo" aria-label="デジクリ">
+        {{ (resources.Get "img/logo.svg").Content | safeHTML }}
+      </a>
 
-        {{/* ロゴ */}}
-        <a
-          href="{{ .Site.Home.Permalink }}"
-          class="logo"
-          aria-label="デジクリ"
-        >
-          {{ (resources.Get "img/logo.svg").Content | safeHTML }}
-        </a>
+      {{/* 目次 */}}
+      <nav class="menu">
+        <ul>
+          {{ block "toc" . }}
+          {{ end }}
+        </ul>
+      </nav>
 
-        {{/* 目次 */}}
-        <nav class="menu">
-          <ul>
-            {{ block "toc" . }}
-            {{ end }}
-          </ul>
-        </nav>
+      {{/* 関連リンク */}}
+      <nav class="menu">
+        <ul>
+          {{ range index .Site.Menus "links" }}
+          <li>
+            <a href="{{ .URL }}" rel="noopener" target="_blank" class="menu__item">
+              {{/* アイコン */}}
+              {{ (resources.Get (print "img/icons/" .Identifier ".svg")).Content | safeHTML }}
 
-        {{/* 関連リンク */}}
-        <nav class="menu">
-          <ul>
-            {{ range index .Site.Menus "links" }}
-              <li>
-                <a
-                  href="{{ .URL }}"
-                  rel="noopener"
-                  target="_blank"
-                  class="menu__item"
-                >
-                  {{/* アイコン */}}
-                  {{ (resources.Get (print "img/icons/" .Identifier ".svg")).Content | safeHTML }}
+              {{/* タイトル */}}
+              {{ .Name }}
 
-                  {{/* タイトル */}}
-                  {{ .Name }}
+              {{/* 新規タブで開くアイコン */}}
+              {{ (resources.Get "img/icons/open-in-new.svg").Content | safeHTML }}
+            </a>
+          </li>
+          {{ end }}
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-                  {{/* 新規タブで開くアイコン */}}
-                  {{ (resources.Get "img/icons/open-in-new.svg").Content | safeHTML }}
-                </a>
-              </li>
-            {{ end }}
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      {{ block "main" . }}
-      {{ end }}
-    </main>
-
-    <footer class="footer">
-      <small>© 2004-2024 芝浦工業大学 デジクリ</small>
-    </footer>
-
-    {{/* 共通 JavaScript */}}
-    {{ with resources.Get "js/index.js" | js.Build | minify | resources.Fingerprint }}
-      <script
-        src="{{ .Permalink }}"
-        defer
-      ></script>
+  <main>
+    {{ block "main" . }}
     {{ end }}
+  </main>
 
-    {{/* 各ページ用の JavaScript */}}
-    {{ block "script" . }}
-    {{ end }}
-  </body>
+  <footer class="footer">
+    <small>© 2004-2024 芝浦工業大学 デジクリ</small>
+  </footer>
+
+  {{/* 共通 JavaScript */}}
+  {{ with resources.Get "js/index.js" | js.Build | minify | resources.Fingerprint }}
+  <script src="{{ .Permalink }}" defer></script>
+  {{ end }}
+
+  {{/* 各ページ用の JavaScript */}}
+  {{ block "script" . }}
+  {{ end }}
+</body>
+
 </html>
