--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -14,7 +14,8 @@
 }
 
 html {
-  font-family: "Inter", "Roboto", "Helvetica Neue", "Arial", "Noto Sans JP",
+  font-family:
+    "Inter", "Roboto", "Helvetica Neue", "Arial", "Noto Sans JP",
     "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif;
   font-size: 100%;
   font-weight: 400;
